2006-08-28  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (check_PROGRAMS): Add test-recur-weekly-2.
	(TESTS): Likewise.
	(test_recur_weekly_2_SOURCES): New.
	(test_recur_weekly_2_LDADD): Likewise.
	* test-recur-weekly-2.c: New file.
	* test-recur-weekly-2.expected: Likewise.

2006-08-08  Neal H. Walfield  <neal@gnu.org>

	* sqlite.c: New file.
	* Makefile.am (libeventdb_la_SOURCES): Add sqlite.c.
	* event-db.h: Don't include <sqlite.h>.  Include "event-cal.h" and
	"event.h".
	(events_enumerate_t): New typedef.
	(eventid_to_uid_t): Likewise.
	(set_default_calendar_t): Likewise.
	(event_new_t): Likewise.
	(event_load_t): Likewise.
	(event_load_details_t): Likewise.
	(event_flush_t): Likewise.
	(event_remove_t): Likewise.
	(list_unacknowledged_alarms_t): Likewise.
	(event_mark_unacknowledged_t): Likewise.
	(event_mark_acknowledged_t): Likewise.
	(acknowledge_alarms_through_t): Likewise.
	(event_calendar_new_t): Likewise.
	(event_calendar_flush_t): Likewise.
	(event_calendar_delete_t): Likewise.
	(event_calendar_list_events_t): Likewise.
	(event_calendar_list_deleted_t): Likewise.
	(event_calendar_flush_deleted_t): Likewise.
	(EventDBClass): Add fields events_enumerate, eventid_to_uid,
	set_default_calendar, event_new, event_load, event_load_details,
	event_flush, event_remove, list_unacknowledged_alarms,
	event_mark_unacknowledged, event_mark_acknowledged,
	acknowledge_alarms_through, event_calendar_new,
	event_calendar_flush, event_calendar_delete,
	event_calendar_list_events, event_calendar_list_deleted and
	event_calendar_flush_deleted.  Rename field event_new to
	event_new_func and update users.
	(struct _EventDB): Remove field sqliteh.
	(SQLITE_TRY): Move define from here...
	* sqlite.c (SQLITE_TRY): ... to here.
	* event-cal.h: Don't include "event-db.h".  Include
	"gpe/event-db.h".
	* event-cal.c (event_calendar_flush): Move sql code from here...
	* sqlite.c (do_event_calendar_flush): ... to here.
	* event-cal.c (event_db_calendar_new): Move from here...